# synclife_backend

./: .env.sample  .gitignore  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/user/: abf078c303e7_se_agrego_campo_para_verificar_cuenta.py
src/: main.py
src/api/inventory/application/create_item/: create_item_use_case.py
src/api/inventory/application/delete_item/: delete_item_use_case.py
src/api/inventory/application/update_item/: update_item_dto.py  update_item_use_case.py
src/api/inventory/application/view_all_items/: view_all_item_dto.py  view_item_all_use_case.py
src/api/inventory/application/view_item/: view_item_dto.py  view_item_use_case.py
src/api/inventory/domain/entities/: inventory.py
src/api/inventory/domain/errors/: inventoryError.py  inventoryItem_error.py
src/api/inventory/domain/repositories/: inventory_repository.py
src/api/inventory/domain/validators/: inventory_repository_validator.py  inventory_validator.py
src/api/notes/domain/entities/: notes.py  tags.py
src/api/notes/domain/repositories/: notes_repository.py  tags_repository.py
src/api/reminder/application/add_item/: add_item_use_case.py
src/api/reminder/application/delete_item/: delete_item_use_case.py
src/api/reminder/application/modify_item/: modify_item_use_case.py
src/api/reminder/application/view_all_items/: view_all_items_dto.py  view_all_items_use_case.py
src/api/reminder/application/view_item/: view_item_use_case.py
src/api/reminder/domain/entities/: reminder.py
src/api/reminder/domain/errors/: reminder_validation_error.py
src/api/reminder/domain/repositories/: reminder_repository.py
src/api/reminder/domain/validators/: reminder_repository_validator.py  reminder_validator.py
src/api/shared/domain/errors/: session_repository_error.py  shared_error.py  uuid_error.py
src/api/shared/domain/repositories/: __init__.py  session_repository.py  smtp_email_sender_repository.py
src/api/user/domain/: __init__.py
(+266 files in other folders)
